WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53304
[Windows 7 Release Tests] editing/pasteboard/get-data-text-plain-paste.html, editing/pasteboard/onpaste-text-html.html, fast/events/drag-and-drop-dataTransfer-types-nocrash.html, and fast/events/ondrop-text-html.html failing since
r76824
https://bugs.webkit.org/show_bug.cgi?id=53304
Summary
[Windows 7 Release Tests] editing/pasteboard/get-data-text-plain-paste.html, ...
Jessie Berlin
Reported
2011-01-28 08:32:34 PST
http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r76821%20(8715)/results.html
http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r76824%20(8716)/results.html
I will check in the failing results.
Attachments
Patch
(7.24 KB, patch)
2011-01-28 11:29 PST
,
Enrica Casucci
aroben
: review+
aroben
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2011-01-28 09:03:25 PST
Failing expected results committed for Windows in
r76948
:
http://trac.webkit.org/changeset/76948
Enrica Casucci
Comment 2
2011-01-28 11:29:49 PST
Created
attachment 80467
[details]
Patch Fix for a silly mistake.
WebKit Review Bot
Comment 3
2011-01-28 11:32:00 PST
Attachment 80467
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 10 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 4
2011-01-28 11:35:35 PST
Comment on
attachment 80467
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=80467&action=review
> LayoutTests/ChangeLog:13 > + * platform/win/editing/pasteboard/get-data-text-plain-paste-expected.txt: > + * platform/win/editing/pasteboard/onpaste-text-html-expected.txt: > + * platform/win/fast/events/drag-and-drop-dataTransfer-types-nocrash-expected.txt: > + * platform/win/fast/events/ondrop-text-html-expected.txt:
Instead of modifying these files, you should just delete them. That way we'll use the cross-platform expected results.
Enrica Casucci
Comment 5
2011-01-28 11:47:15 PST
http://trac.webkit.org/changeset/76961
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug