Some drag and drop tests fail since r76824 https://bugs.webkit.org/show_bug.cgi?id=53304

Reviewed by Adam Roben.

Source/WebCore:

There were '||' instead of '&&' in the checks for valid
clipboard content.

* platform/win/ClipboardWin.cpp:
(WebCore::ClipboardWin::getData):
(WebCore::ClipboardWin::types):
(WebCore::ClipboardWin::files):

LayoutTests:

Removing platform-specific tests after fixing the cause of the failure.

* platform/win/editing/pasteboard/get-data-text-plain-paste-expected.txt: Removed.
* platform/win/editing/pasteboard/onpaste-text-html-expected.txt: Removed.
* platform/win/fast/events/drag-and-drop-dataTransfer-types-nocrash-expected.txt: Removed.
* platform/win/fast/events/ondrop-text-html-expected.txt: Removed.



Canonical link: https://commits.webkit.org/67133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76961 268f45cc-cd09-0410-ab3c-d52691b4dbfc